k8s/calendars/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: calendars
  labels:
    app: calendars
  namespace: calendars
spec:
  type: ClusterIP
  selector:
    app: calendars
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: http
