k8s/calendars/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: calendars
  namespace: istio-system
  labels:
    app: calendars
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/upstream-vhost: calendars.calendars.charlieegan3.com
spec:
  tls:
  - hosts:
    - calendars.charlieegan3.com
    secretName: calendars-tls
  rules:
  - host: calendars.charlieegan3.com
    http:
      paths:
      - path: /
        backend:
          serviceName: istio-ingressgateway
          servicePort: 80
